# holybar

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
ui/: appwindow.slint  mainwindow.slint
